fixup! Migrate template report to form
Signed-off-by: greta <gretadoci@gmail.com>

--- a/.github/ISSUE_TEMPLATE/bug_report_form.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report_form.yml
@@ -1,6 +1,6 @@
 name: "Calendar Bug"
 description: "Have you encountered a bug?"
-labels: ["bug", "0. Needs triage"]
+labels: ["bug", "0. to triage"]
 body:
   - type: textarea
     id: reproduce
